<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".NuevaNotaActivity">

    <TextView
        android:id="@+id/textViewNuevaNotaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuevanota_title"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNuevanotaTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:hint="@string/hint_nuevanota_title"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNuevaNotaTitle" />

    <EditText
        android:id="@+id/editTextNuevanotaContenido"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_nuevanota_contenido"
        android:inputType="textMultiLine"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/editTextNuevanotaTitle"
        app:layout_constraintStart_toStartOf="@+id/editTextNuevanotaTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTextNuevanotaTitle" />

    <Button
        android:id="@+id/buttonNuevanotaGuardar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/button_nuevanota_guardar"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextNuevanotaContenido"
        app:layout_constraintStart_toStartOf="@+id/editTextNuevanotaContenido"
        app:layout_constraintTop_toBottomOf="@+id/editTextNuevanotaContenido" />
</androidx.constraintlayout.widget.ConstraintLayout>